added nav menu for mobile

--- a/index.html
+++ b/index.html
@@ -13,15 +13,27 @@
 </head>
 
 <body>
-    <nav>
-        <div>
-            <a id="aboutNav" href="#about">About</a>
+    <nav class="main-navigation">
+        <div id="nav-menu-bar">
+            <a id="nav-menu-button" href="">
+                <!-- menu button icon -->
+                <span class="menu-icon"></span>
+                <span class="menu-icon"></span>
+                <span class="menu-icon"></span>
+            </a>
         </div>
-        <div>
-            <a id="portfolioNav" href="#portfolio">Portfolio</a>
-        </div>
-        <div>
-            <a id="contactNav" href="#contact">Contact</a>
+        <div class="nav-extendable">
+            <ul>
+                <li>
+                    <a id="aboutNav" href="#about">About</a>
+                </li>
+                <li>
+                    <a id="portfolioNav" href="#portfolio">Portfolio</a>
+                </li>
+                <li>
+                    <a id="contactNav" href="#contact">Contact</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
