--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main class="container">
         <section id="about">
             <h1>Radoslav Georgiev</h1>
-            <h2>Web Developer</h2>
+            <h2>Software Developer</h2>
             <p>Self-motivated software developer focused on crafting clean & user‑friendly experiences.</p>
             <ul id="languagesList">
                 <li><img src="img/logos/html_logo.png" alt="HTML logo" width="100" height="100">HTML</li>
