minor style changes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <img class="portfolioThumb" src="img/cards/brick-breaker.png" alt="Brick Breaker image">
                     </a>
                     <a href="https://github.com/BaiRado/javascript-practice/tree/master/brick-breaker" class="extraLink"
-                        target="_blank">GitHub link</a>
+                        target="_blank">View code</a>
                 </div>
 
                 <!-- Landing Page - React -->
@@ -78,7 +78,7 @@
                         <img class="portfolioThumb" src="img/cards/landing-page.png" alt="Landing page image">
                     </a>
                     <a href="https://github.com/BaiRado/javascript-practice/tree/master/landing-page" class="extraLink"
-                        target="_blank">GitHub link</a>
+                        target="_blank">View code</a>
                 </div>
 
                 <!-- Weather Finder - React -->
@@ -92,7 +92,7 @@
                         <img class="portfolioThumb" src="img/cards/weather-finder.png" alt="Weather Finder image">
                     </a>
                     <a href="https://github.com/BaiRado/javascript-practice/tree/master/weather-app-react"
-                        class="extraLink" target="_blank">GitHub link</a>
+                        class="extraLink" target="_blank">View code</a>
                 </div>
 
                 <!-- Time Converter -->
@@ -105,7 +105,7 @@
                         <img class="portfolioThumb" src="img/cards/time-converter.png" alt="Time Converter image">
                     </a>
                     <a href="https://github.com/BaiRado/javascript-practice/tree/master/time-converter"
-                        class="extraLink" target="_blank">GitHub link</a>
+                        class="extraLink" target="_blank">View code</a>
                 </div>
 
                 <!-- Drawing Canvas -->
@@ -118,7 +118,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/drawing-canvas.png" alt="Drawing Canvas image">
                     </a>
-                    <a href="https://github.com/BaiRado/js-canvas" class="extraLink" target="_blank">GitHub link</a>
+                    <a href="https://github.com/BaiRado/js-canvas" class="extraLink" target="_blank">View code</a>
                 </div>
 
                 <!-- Survey Form -->
@@ -131,7 +131,7 @@
                         <img class="portfolioThumb" src="img/cards/survey-form.jpg" alt="Survey form image">
                     </a>
                     <a href="https://github.com/BaiRado/javascript-practice/tree/master/survey-form" class="extraLink"
-                        target="_blank">GitHub link</a>
+                        target="_blank">View code</a>
                 </div>
             </div>
         </section>
