--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <!-- Landing Page - React -->
                 <div class="listingWrapper">
-                    <a href="https://codepen.io/BaiRado/full/agOZda" class="portfolioListing" target="_blank">
+                    <a href="https://pvyt1.codesandbox.io/" class="portfolioListing">
                         <div class="portfolioText">
                             <h3>Landing Page - React</h3>
                             <p class="portfolioDetails">Landing page made in React loosely following a free online
