updated card text

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                     <a href="https://ezzp4.codesandbox.io/" class="portfolioListing">
                         <h3>Brick Breaker</h3>
                         <div class="portfolioText">
-                            <p class="portfolioDetails">A Brick Breaker/Breakout clone made using JavaScript</p>
+                            <p class="portfolioDetails">A Brick Breaker/Breakout clone made using plain JavaScript. The
+                                idea came about from me wanting to build a simple game without using any libraries.</p>
                         </div>
                         <img class="portfolioThumb" src="img/cards/brick-breaker.png" alt="Brick Breaker image">
                     </a>
@@ -72,8 +73,9 @@
                     <a href="https://pvyt1.codesandbox.io/" class="portfolioListing">
                         <h3>Landing Page - React</h3>
                         <div class="portfolioText">
-                            <p class="portfolioDetails">Landing page made in React loosely following a free online
-                                template</p>
+                            <p class="portfolioDetails">A landing page made in React as prctice in front end
+                                development. It loosely follows a free online
+                                template.</p>
                         </div>
                         <img class="portfolioThumb" src="img/cards/landing-page.png" alt="Landing page image">
                     </a>
@@ -86,8 +88,9 @@
                     <a href="https://codepen.io/BaiRado/full/PvvYmQ" class="portfolioListing" target="_blank">
                         <h3>Weather Finder - React</h3>
                         <div class="portfolioText">
-                            <p class="portfolioDetails">React application to find the current weather in any city
-                                worldwide</p>
+                            <p class="portfolioDetails">React application that is used to find the current weather in
+                                any city
+                                worldwide, provided you enter a city name and country.</p>
                         </div>
                         <img class="portfolioThumb" src="img/cards/weather-finder.png" alt="Weather Finder image">
                     </a>
@@ -100,7 +103,9 @@
                     <a href="https://01q1r.codesandbox.io/" class="portfolioListing">
                         <h3>Time Converter</h3>
                         <div class="portfolioText">
-                            <p class="portfolioDetails">Time converter for converting time to decimal and vice versa</p>
+                            <p class="portfolioDetails">Time converter application for converting time to decimal and
+                                vice
+                                versa. It can also be used to transform one unit of time to another.</p>
                         </div>
                         <img class="portfolioThumb" src="img/cards/time-converter.png" alt="Time Converter image">
                     </a>
@@ -113,8 +118,10 @@
                     <a href="https://codepen.io/BaiRado/full/qGLbYj" class="portfolioListing" target="_blank">
                         <h3>Drawing Canvas</h3>
                         <div class="portfolioText">
-                            <p class="portfolioDetails">Early project I've added features to over time,
-                                including a Scanline fill algorithm</p>
+                            <p class="portfolioDetails">This is an early project I've slowly added features to over
+                                time.
+                                The bucket tool was made using Scanline fill algorithm, however, due to the size of the
+                                canvas, filling up a large area can be slow.</p>
                         </div>
                         <img class="portfolioThumb" src="img/cards/drawing-canvas.png" alt="Drawing Canvas image">
                     </a>
@@ -126,7 +133,7 @@
                     <a href="https://codepen.io/BaiRado/full/YbbWpv" class="portfolioListing" target="_blank">
                         <h3>Survey Form</h3>
                         <div class="portfolioText">
-                            <p class="portfolioDetails">An example survey form</p>
+                            <p class="portfolioDetails">An example survey form.</p>
                         </div>
                         <img class="portfolioThumb" src="img/cards/survey-form.jpg" alt="Survey form image">
                     </a>
