--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             <h2>Software Developer</h2>
             <p>Self-motivated software developer focused on crafting clean & user‑friendly experiences.</p>
             <ul id="languagesList">
-                <li><img src="img/logos/html_logo.png" alt="HTML logo" width="100" height="100">HTML</li>
-                <li><img src="img/logos/css_logo.png" alt="CSS logo" width="100" height="100">CSS</li>
-                <li><img src="img/logos/js_logo.png" alt="Javascript logo" width="100" height="100">JavaScript</li>
-                <li><img src="img/logos/nodejs_logo.png" alt="NodeJS logo" width="100" height="100">Node.js</li>
-                <li><img src="img/logos/react_logo.png" alt="React logo" width="100" height="100">React</li>
+                <li>HTML<img src="img/logos/html_logo.png" alt="HTML logo" width="100" height="100"></li>
+                <li>CSS<img src="img/logos/css_logo.png" alt="CSS logo" width="100" height="100"></li>
+                <li>JavaScript<img src="img/logos/js_logo.png" alt="Javascript logo" width="100" height="100"></li>
+                <li>Node.js<img src="img/logos/nodejs_logo.png" alt="NodeJS logo" width="100" height="100"></li>
+                <li>React<img src="img/logos/react_logo.png" alt="React logo" width="100" height="100"></li>
             </ul>
         </section>
 
