--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <a href="https://pvyt1.codesandbox.io/" class="portfolioListing">
                         <h3>Landing Page - React</h3>
                         <div class="portfolioText">
-                            <p class="portfolioDetails">A landing page made in React as prctice in front end
+                            <p class="portfolioDetails">A landing page made in React as practice in front end
                                 development. It loosely follows a free online
                                 template.</p>
                         </div>
