--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
         <section id="portfolio">
             <h2>Portfolio</h2>
             <div id="portfolioContent">
+                <!-- Shopping Cart - React -->
+                <div class="listingWrapper">
+                    <a href="https://f8rxn.codesandbox.io/" class="portfolioListing">
+                        <h3>Shopping Cart - React</h3>
+                        <div class="portfolioText">
+                            <p class="portfolioDetails">An example online store page with a floating cart. Made with
+                                React, React-Redux and React-Bootstrap.</p>
+                        </div>
+                        <img class="portfolioThumb" src="img/cards/shopping-cart.png" alt="Shopping cart image">
+                    </a>
+                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/shopping-cart-react"
+                        class="extraLink" target="_blank">View code</a>
+                </div>
+
                 <!-- Brick Breaker -->
                 <div class="listingWrapper">
                     <a href="https://ezzp4.codesandbox.io/" class="portfolioListing">
@@ -126,19 +140,6 @@
                         <img class="portfolioThumb" src="img/cards/drawing-canvas.png" alt="Drawing Canvas image">
                     </a>
                     <a href="https://github.com/BaiRado/js-canvas" class="extraLink" target="_blank">View code</a>
-                </div>
-
-                <!-- Survey Form -->
-                <div class="listingWrapper">
-                    <a href="https://codepen.io/BaiRado/full/YbbWpv" class="portfolioListing" target="_blank">
-                        <h3>Survey Form</h3>
-                        <div class="portfolioText">
-                            <p class="portfolioDetails">An example survey form.</p>
-                        </div>
-                        <img class="portfolioThumb" src="img/cards/survey-form.jpg" alt="Survey form image">
-                    </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/survey-form" class="extraLink"
-                        target="_blank">View code</a>
                 </div>
             </div>
         </section>
