--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
             <h2>Software Developer</h2>
             <p>Self-motivated software developer focused on crafting clean & user‑friendly experiences.</p>
             <ul id="languagesList">
-                <li>HTML<img src="img/logos/html_logo.png" alt="HTML logo" width="100" height="100"></li>
-                <li>CSS<img src="img/logos/css_logo.png" alt="CSS logo" width="100" height="100"></li>
-                <li>JavaScript<img src="img/logos/js_logo.png" alt="Javascript logo" width="100" height="100"></li>
-                <li>Node.js<img src="img/logos/nodejs_logo.png" alt="NodeJS logo" width="100" height="100"></li>
-                <li>React<img src="img/logos/react_logo.png" alt="React logo" width="100" height="100"></li>
+                <li>HTML<img src="img/logos/html.png" alt="HTML logo" width="100" height="100"></li>
+                <li>CSS<img src="img/logos/css.png" alt="CSS logo" width="100" height="100"></li>
+                <li>JavaScript<img src="img/logos/javascript.png" alt="Javascript logo" width="100" height="100"></li>
+                <li>Node.js<img src="img/logos/nodejs.png" alt="NodeJS logo" width="100" height="100"></li>
+                <li>React<img src="img/logos/react.png" alt="React logo" width="100" height="100"></li>
+                <li>Redux<img src="img/logos/redux.svg" alt="Redux logo" width="100" height="100"></li>
+                <li>Bootstrap<img src="img/logos/bootstrap.svg" alt="Bootstrap logo" width="100" height="100"></li>
             </ul>
         </section>
 
