fixed broken link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                         <h3>Shopping Cart - React</h3>
                         <div class="portfolioText">
                             <p class="portfolioDetails">An example online store page with a floating cart. Made with
-                                React, React-Redux and React-Bootstrap.</p>
+                                React, React-Redux and React-Bootstrap. Products also persist in the cart after a page
+                                reload.
+                            </p>
                         </div>
                         <img class="portfolioThumb" src="img/cards/shopping-cart.png" alt="Shopping cart image">
                     </a>
@@ -141,7 +143,8 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/drawing-canvas.png" alt="Drawing Canvas image">
                     </a>
-                    <a href="https://github.com/BaiRado/js-canvas" class="extraLink" target="_blank">View code</a>
+                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/js-canvas" class="extraLink"
+                        target="_blank">View code</a>
                 </div>
             </div>
         </section>
