added new projects

--- a/index.html
+++ b/index.html
@@ -56,6 +56,66 @@
         <section id="portfolio">
             <h2>Portfolio</h2>
             <div id="portfolioContent">
+                <!-- Tower of Hanoi visualization -->
+                <div class="listingWrapper">
+                    <a href="https://z02l2.codesandbox.io/" class="portfolioListing">
+                        <h3>Tower of Hanoi visualization</h3>
+                        <div class="portfolioText">
+                            <p class="portfolioDetails">A visualization of the Tower of Hanoi problem. Ability to change
+                                the number of disks and pegs and immediately see how many moves are needed to solve
+                                the problem.</p>
+                        </div>
+                        <img class="portfolioThumb" src="img/cards/hanoi.png" alt="Tower of Hanoi image">
+                    </a>
+                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/algorithms/tower-of-hanoi"
+                        class="extraLink" target="_blank">View code</a>
+                </div>
+
+                <!-- Chess -->
+                <div class="listingWrapper">
+                    <a href="https://g0vr7.codesandbox.io/" class="portfolioListing">
+                        <h3>Chess</h3>
+                        <div class="portfolioText">
+                            <p class="portfolioDetails">Created with HTML, CSS and JS. The game has all
+                                basic rules, including en passant, castling and underpromotion. It also has move
+                                backtracking and move limiting when in check.</p>
+                        </div>
+                        <img class="portfolioThumb" src="img/cards/chess.png" alt="Chess image">
+                    </a>
+                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/chess" class="extraLink"
+                        target="_blank">View code</a>
+                </div>
+
+                <!-- Racing Game - NN / NEAT -->
+                <div class="listingWrapper">
+                    <a href="https://cq35q.codesandbox.io/" class="portfolioListing">
+                        <h3>Racing Game - Neural Network AI</h3>
+                        <div class="portfolioText">
+                            <p class="portfolioDetails">A racing game created with the intent to train a Neural
+                                Network(NN) on it. A population-based evolutionary algorithm, called NEAT, was used for
+                                the NN.</p>
+                        </div>
+                        <img class="portfolioThumb" src="img/cards/racing-nn.png" alt="Racing Game image">
+                    </a>
+                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/racing-game" class="extraLink"
+                        target="_blank">View code</a>
+                </div>
+
+                <!-- Synth Piano - React -->
+                <div class="listingWrapper">
+                    <a href="https://v1d2g.codesandbox.io/" class="portfolioListing">
+                        <h3>Synth Piano - React</h3>
+                        <div class="portfolioText">
+                            <p class="portfolioDetails">A small React application made with the help of the popular Web
+                                Audio framework ToneJS. The application includes all 88 piano keys, volume control and
+                                note sustain.</p>
+                        </div>
+                        <img class="portfolioThumb" src="img/cards/piano.png" alt="Synth Piano image">
+                    </a>
+                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/piano-react" class="extraLink"
+                        target="_blank">View code</a>
+                </div>
+
                 <!-- Shopping Cart - React -->
                 <div class="listingWrapper">
                     <a href="https://f8rxn.codesandbox.io/" class="portfolioListing">
@@ -155,6 +215,7 @@
                 <a id="emailLink" href="mailto:radobgeorgiev@gmail.com" target="_blank" rel="nofollow">Email Me</a>
                 <p><span id="email">radobgeorgiev@gmail.com</span></p>
                 <a id="gitLink" href="https://github.com/BaiRado" target="_blank">GitHub</a>
+                <!-- <a id="gitLink" href="https://linkedin.com/in/BaiRado" target="_blank">LinkedIn</a> -->
             </div>
         </footer>
     </main>
