--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <h1>Radoslav Georgiev</h1>
             <h2>Software Developer</h2>
             <p>Self-motivated software developer with years of experience working on a variety of projects,
-                using different programming languages and technologies. My focus is on creating and delivering great end
-                products, with a focal point of ease of use, clarity and functionality for both the end user and back
-                end.</p>
+                using different programming languages and technologies. My interest and focus is on delivering 
+                solutions to complex real world problems, and providing a great, easy to use, and intuitive design 
+                and user experience.</p>
         </section>
 
         <section id="portfolio">
@@ -290,6 +290,7 @@
                 <a id="emailLink" href="mailto:radobgeorgiev@gmail.com" target="_blank" rel="nofollow">Email Me</a>
                 <p><span id="email">radobgeorgiev@gmail.com</span></p>
                 <a id="gitLink" href="https://github.com/BaiRado" target="_blank">GitHub</a>
+                <!-- <a id="gitLink" href="https://linkedin.com/in/BaiRado" target="_blank">LinkedIn</a> -->
             </div>
         </footer>
     </main>
