--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/map-gen.png" alt="Map generation image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/procedural-generation"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/procedural-generation"
                         class="extraLink" target="_blank">View code</a>
                 </div>
 
@@ -78,7 +78,7 @@
                         <img class="portfolioThumb" src="img/cards/evade-the-reaction.png"
                             alt="Evade the reaction image">
                     </a>
-                    <!-- <a href="https://github.com/BaiRado"
+                    <!-- <a href="https://github.com/RBGeorgiev"
                         class="extraLink" target="_blank">View code</a> -->
                 </div>
 
@@ -92,7 +92,7 @@
                         <img class="portfolioThumb" src="img/cards/sort-visualization.png"
                             alt="Sorting algorithms visualization image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/algorithms/sort"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/algorithms/sort"
                         class="extraLink" target="_blank">View code</a>
                 </div>
 
@@ -107,7 +107,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/maze-builder.png" alt="Maze builder image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/maze-builder" class="extraLink"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/maze-builder" class="extraLink"
                         target="_blank">View code</a>
                 </div>
 
@@ -122,7 +122,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/pathfinding.png" alt="Pathfinding image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/pathfinding" class="extraLink"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/pathfinding" class="extraLink"
                         target="_blank">View code</a>
                 </div>
 
@@ -137,7 +137,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/hanoi.png" alt="Tower of Hanoi image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/algorithms/tower-of-hanoi"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/algorithms/tower-of-hanoi"
                         class="extraLink" target="_blank">View code</a>
                 </div>
 
@@ -152,7 +152,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/chess.png" alt="Chess image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/chess" class="extraLink"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/chess" class="extraLink"
                         target="_blank">View code</a>
                 </div>
 
@@ -167,7 +167,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/racing-nn.png" alt="Racing Game image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/racing-game" class="extraLink"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/racing-game" class="extraLink"
                         target="_blank">View code</a>
                 </div>
             </div>
@@ -188,7 +188,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/piano.png" alt="Synth Piano image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/piano-react" class="extraLink"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/piano-react" class="extraLink"
                         target="_blank">View code</a>
                 </div>
 
@@ -204,7 +204,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/shopping-cart.png" alt="Shopping cart image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/shopping-cart-react"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/shopping-cart-react"
                         class="extraLink" target="_blank">View code</a>
                 </div>
 
@@ -218,7 +218,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/brick-breaker.png" alt="Brick Breaker image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/brick-breaker" class="extraLink"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/brick-breaker" class="extraLink"
                         target="_blank">View code</a>
                 </div>
 
@@ -233,7 +233,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/landing-page.png" alt="Landing page image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/landing-page" class="extraLink"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/landing-page" class="extraLink"
                         target="_blank">View code</a>
                 </div>
 
@@ -248,7 +248,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/weather-finder.png" alt="Weather Finder image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/weather-app-react"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/weather-app-react"
                         class="extraLink" target="_blank">View code</a>
                 </div>
 
@@ -263,7 +263,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/time-converter.png" alt="Time Converter image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/time-converter"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/time-converter"
                         class="extraLink" target="_blank">View code</a>
                 </div>
 
@@ -279,7 +279,7 @@
                         </div>
                         <img class="portfolioThumb" src="img/cards/drawing-canvas.png" alt="Drawing Canvas image">
                     </a>
-                    <a href="https://github.com/BaiRado/javascript-practice/tree/master/js-canvas" class="extraLink"
+                    <a href="https://github.com/RBGeorgiev/javascript-practice/tree/master/js-canvas" class="extraLink"
                         target="_blank">View code</a>
                 </div>
             </div>
@@ -290,7 +290,7 @@
             <div id="contactWrapper">
                 <a id="emailLink" href="mailto:radobgeorgiev@gmail.com" target="_blank" rel="nofollow">Email Me</a>
                 <p><span id="email">radobgeorgiev@gmail.com</span></p>
-                <a id="gitLink" href="https://github.com/BaiRado" target="_blank">GitHub</a>
+                <a id="gitLink" href="https://github.com/RBGeorgiev" target="_blank">GitHub</a>
                 <!-- <a id="gitLink" href="https://linkedin.com/in/BaiRado" target="_blank">LinkedIn</a> -->
             </div>
         </footer>
