--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <section id="about">
             <h1>Radoslav Georgiev</h1>
             <h2>Software Developer</h2>
-            <p>Self-motivated software developer with years of experience working on a variety of projects,
+            <p>Self-motivated software developer with experience working on a variety of projects,
                 using different programming languages and technologies. My interest and focus is on delivering 
-                solutions to complex real world problems, and providing a great, easy to use, and intuitive design 
+                solutions to complex real world problems, and providing an easy to use, and intuitive design 
                 and user experience.</p>
         </section>
 
@@ -58,7 +58,7 @@
                         <div class="portfolioText">
                             <p class="portfolioDetails">A seeded polygon tile based procedural map generator written in
                                 Javascript. Includes more than 60 possible biomes for each tile depending on factors
-                                such as temeprature, humidity, elevation, surrounding rivers, etc...</p>
+                                such as temperature, humidity, elevation, surrounding rivers, etc...</p>
                         </div>
                         <img class="portfolioThumb" src="img/cards/map-gen.png" alt="Map generation image">
                     </a>
